Fix text wrap and symbols not being decoded (#324)

--- a/ProjectLighthouse/StaticFiles/css/styles.css
+++ b/ProjectLighthouse/StaticFiles/css/styles.css
@@ -27,6 +27,7 @@ canvas.hide-subjects {
 
 .card {
     display: flex;
+    overflow-wrap: anywhere;
     width: 100%;
 }
 
